# Dash

./: .gitmodules  README.md  setup_boot.sh
QtDash/: RPM.py  main.py
RS485_CAN_HAT_Code/CAN/python/: receive.py
src/dash_msgs/: CMakeLists.txt
src/dash_msgs/msg/: BrakeTemp.msg  DashMsg.msg  DashReport.msg  ImuIn.msg  MotecIn.msg  MotecReport.msg  SuspensionReport.msg  TeensyRear.msg
src/fastdash/: CMakeLists.txt  package.xml
src/fastdash/include/: fastdash.hpp
src/fastdash/include/fastdash/: fastdash.hpp
src/fastdash/launch/: launch_dash.launch.py
src/fastdash/msg/: imu.msg  motec.msg  rear_teensy.msg
src/fastdash/src/: fastdash.cpp
src/pydash/: requirements.txt
src/pydash/pydash/: debug_screen.py  gui.py  main.qml  node.py  rpm.py  skid_screen.py
